--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "base-fast-api"
+name = "AI-furniture-bot"
 version = "0.1.0"
 description = ""
 authors = [
@@ -34,7 +34,8 @@ dependencies = [
     "sqlalchemy (>=2.0.41,<3.0.0)",
     "pytelegrambotapi (>=4.29.1,<5.0.0)",
     "natasha (>=1.6.0,<2.0.0)",
-    "scikit-learn (>=1.7.2,<2.0.0)"
+    "scikit-learn (>=1.7.2,<2.0.0)",
+    "requests (>=2.32.5,<3.0.0)"
 ]
 
 
